--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dependencies": {
         "@headlessui/react": "^2.2.0",
         "@inertiajs/inertia": "^0.11.1",
-         "@inertiajs/react": "^2.0.0",
+        "@inertiajs/react": "^2.0.0",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-collapsible": "^1.1.3",
@@ -47,6 +47,7 @@
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.6.0",
         "ag-grid-react": "^34.1.1",
+        "axios": "^1.11.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
@@ -55,6 +56,7 @@
         "lucide-react": "^0.475.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-querybuilder": "^8.8.3",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
